<?xml version="1.0" encoding="utf-8"?>

<!--
   * Copyright (C) 2024 murangogo
   *
   * This library is free software; you can redistribute it and/or modify it under
   * the terms of the GNU Lesser General Public License as published by the Free
   * Software Foundation; either version 3 of the License, or (at your option)
   * any later version.
   *
   * This library is distributed in the hope that it will be useful, but WITHOUT
   * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
   * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
   *
   * You should have received a copy of the GNU Lesser General Public License along
   * with this library; if not, write to the Free Software Foundation, Inc.,
   * 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
   *-->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="ui_current_mode_text"
        app:title="@string/current_mode_text"
        app:titleTextAppearance="?android:attr/textAppearanceLarge"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        app:key="ui_local_ai_translation"
        app:title="@string/ai_title"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="nllb_translation"
            app:title="@string/nllb_name"
            app:icon="@drawable/meta_nllb"
            app:summary="@string/nllb_description"/>

        <Preference
            app:key="manage_nllb_model"
            app:title="@string/manage_nllb_models" />

        <SwitchPreferenceCompat
            app:key="hymt2_translation"
            app:title="@string/llamacpp_name"
            app:summary="@string/llamacpp_description"/>

        <Preference
            app:key="manage_hymt2_model"
            app:title="@string/manage_llamacpp_models" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="ui_openai_providers"
        app:title="@string/uniaiapi_name"
        app:iconSpaceReserved="false">
        <!-- 由 APIConfig.kt 动态填充 OpenAI 厂商列表 -->
    </PreferenceCategory>

    <PreferenceCategory
        app:key="ui_cloud_api_translation_text"
        app:title="@string/pre_api_title"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="ui_bing_translation_text"
            app:title="@string/bingapi_name"
            app:icon="@drawable/bing"
            app:summary="@string/bingapi_description"/>

        <SwitchPreferenceCompat
            app:key="ui_niu_translation_text"
            app:title="@string/niuapi_name"
            app:icon="@drawable/niutrans"
            app:summary="@string/niuapi_description"/>

        <Preference
            app:key="ui_manage_niu_api_text"
            app:title="@string/manage_niu_api" />

        <SwitchPreferenceCompat
            app:key="ui_volc_translation_text"
            app:title="@string/volcapi_name"
            app:icon="@drawable/volc_engine"
            app:summary="@string/volcapi_description"/>

        <Preference
            app:key="ui_manage_volc_api_text"
            app:title="@string/manage_volc_api" />

        <SwitchPreferenceCompat
            app:key="ui_azure_translation_text"
            app:title="@string/azureapi_name"
            app:icon="@drawable/azure"
            app:summary="@string/azureapi_description"/>

        <Preference
            app:key="ui_manage_azure_api_text"
            app:title="@string/manage_azure_api" />

        <SwitchPreferenceCompat
            app:key="ui_deepl_translation_text"
            app:title="@string/deeplapi_name"
            app:icon="@drawable/deepl"
            app:summary="@string/deeplapi_description"/>

        <Preference
            app:key="ui_manage_deepl_api_text"
            app:title="@string/manage_deepl_api" />

        <SwitchPreferenceCompat
            app:key="ui_baidu_translation_text"
            app:title="@string/baiduapi_name"
            app:icon="@drawable/baiduyi"
            app:summary="@string/baiduapi_description"/>

        <Preference
            app:key="ui_manage_baidu_api_text"
            app:title="@string/manage_baidu_api" />

        <SwitchPreferenceCompat
            app:key="ui_tencent_translation_text"
            app:title="@string/tencentapi_name"
            app:icon="@drawable/tencentyun"
            app:summary="@string/tencentapi_description"/>

        <Preference
            app:key="ui_manage_tencent_api_text"
            app:title="@string/manage_tencent_api" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>