<?xml version="1.0" encoding="utf-8"?>

<!--
   * Copyright (C) 2024 murangogo
   *
   * This library is free software; you can redistribute it and/or modify it under
   * the terms of the GNU Lesser General Public License as published by the Free
   * Software Foundation; either version 3 of the License, or (at your option)
   * any later version.
   *
   * This library is distributed in the hope that it will be useful, but WITHOUT
   * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
   * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
   *
   * You should have received a copy of the GNU Lesser General Public License along
   * with this library; if not, write to the Free Software Foundation, Inc.,
   * 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
   *-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/text_translate_fragment"
        android:title="@string/text_translate_tab"
        android:icon="@drawable/text_translate_icon"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/import_manga_fragment"
        android:title="@string/import_manga_page"
        android:icon="@drawable/import_manga_icon"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/translate_fragment"
        android:title="@string/translate_page"
        android:icon="@drawable/translate_icon"
        android:orderInCategory="3"/>

    <item
        android:id="@+id/history_fragment"
        android:title="@string/history_page"
        android:icon="@drawable/history_icon"
        android:orderInCategory="4"/>

    <item
        android:id="@+id/me_fragment"
        android:title="@string/me_page"
        android:icon="@drawable/setting_icon"
        android:orderInCategory="5"/>

</menu>